--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "arm-ios": "arch -x86_64 react-native run-ios",
+    "device-ios": "arch -x86_64 react-native run-ios --device '김강민의 iPhone' --configuration Release"
   },
   "dependencies": {
     "expo": "~45.0.0",
