--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/styled-components": "^5.1.25",
+    "@types/styled-components-react-native": "^5.1.3",
+    "babel-plugin-styled-components": "^2.0.7"
   },
   "private": true
 }
